[project]
name = "azul"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Staszczuk",email = "41273017+staszczuk@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "azul", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.per-file-ignores]
"./src/azul/__init__.py" = ["F401"]
